--- a/SDK4/local.properties
+++ b/SDK4/local.properties
@@ -19,3 +19,4 @@ DB_DIALECT=org.hibernate.dialect.MySQLDialect
 
 #NAMESPACE_PREFIX=gme://SDK Example Project.caCORE/1/
 CADSR_CONNECTION_URL=http://cadsrapi-dev.nci.nih.gov/cadsrapi40
+CSM_PROJECT_NAME=sdk
