--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -37,6 +37,9 @@ WEBSERVICE_NAME=${PROJECT_NAME}Service
 #  CSM_PROJECT_NAME: used as a prefix when creating the:
 #		1) CSM security configuration file name
 #
+#  NOTE:  CSM_PROJECT_NAME valued must  match the Application name used when
+#         setting up security using CSM's UPT
+#
 #  ENABLE_INSTANCE_LEVEL_SECURITY: used to enable/disable CSM instance level security.
 #  Only relevant if SECURITY_ENABLED property is set to 'true'.
 #
@@ -48,7 +51,7 @@ WEBSERVICE_NAME=${PROJECT_NAME}Service
 #
 ##################################################################################
 ENABLE_SECURITY=false
-CSM_PROJECT_NAME=sdk
+CSM_PROJECT_NAME=${PROJECT_NAME}
 ENABLE_INSTANCE_LEVEL_SECURITY=false
 ENABLE_ATTRIBUTE_LEVEL_SECURITY=false
 CACHE_PROTECTION_ELEMENTS=false
@@ -77,12 +80,16 @@ CACHE_PROTECTION_ELEMENTS=false
 #  
 #  ENABLE_COMMON_LOGGING_MODULE:  if "yes" or "true", will enable the Common
 #  Logging Module (CLM).  Only valid if the Writable API extension is enabled.
+#
+#  CLM_PROJECT_NAME: Value will be used to populated the CLM logging table 
+#  (LOG_MESSAGE) application column. Only valid if CLM is enabled.
 ##################################################################################
 ENABLE_WRITABLE_API_EXTENSION=false
 DATABASE_TYPE=oracle
 IDENTITY_GENERATOR_TAG=<generator class="assigned"/>
 CADSR_CONNECTION_URL=http://cadsrapi.nci.nih.gov/cadsrapi40
 ENABLE_COMMON_LOGGING_MODULE=true
+CLM_PROJECT_NAME=${PROJECT_NAME}
 
 ################################################################################## 
 #  APPLICATION SERVER PROPERTIES
@@ -210,8 +217,8 @@ CLM_DB_DRIVER=${DB_DRIVER}
 #							attributes.  At runtime, the value of domain object 
 #							attributes containing annotations will be validated
 #							prior to insert or update.  This setting is only
-#							valid if the Writable API extension is enabled as
-#							well.
+#							valid if the Writable API extension and security 
+#							are enabled as well.
 ##################################################################################
 VALIDATE_LOGICAL_MODEL=true
 VALIDATE_MODEL_MAPPING=true
