Externalized the show sql
SVN-Revision: 2154

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -85,3 +85,4 @@ extension.sdk.security.writable.applicationservice.method.impl=gov.nih.nci.syste
 
 HBM2DDL_ENABLED=false
 HBM2DDL_TYPE=validate
+HIBERNATE_SHOW_SQL=false
