--- a/SDK4/build.xml
+++ b/SDK4/build.xml
@@ -405,6 +405,7 @@
 			<replacefilter token="@CLM_DB_USERNAME@" value="${CLM_DB_USERNAME}" />	
 			<replacefilter token="@CLM_DB_PASSWORD@" value="${CLM_DB_PASSWORD}" />	
 			<replacefilter token="@CLM_PROJECT_NAME@" value="${CLM_PROJECT_NAME}" />
+			<replacefilter token="@HIBERNATE_SHOW_SQL@" value="${HIBERNATE_SHOW_SQL}" />
 		</replace>
 		<copy todir="${output.src.dir}" file="${system.config.security.dir}/${csm.ehcache.file}"/>
 		<copy tofile="${output.src.dir}/${csm.security.config.file}" file="${system.config.security.dir}/${csm.security.config.original.file}"/>
