Added comments to clarify use of the EXCLUDE_NAME, EXCLUDE_PACKAGE properties.
SVN-Revision: 2161

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -123,6 +123,36 @@ SERVER_URL=http://localhost:8080/${PROJECT_NAME}
 
 #  EXCLUDE_NAME: specifies the name pattern of the class(es) within the object/
 #  data model that should be ignored (not processed) by the code generator.
+#
+#  NOTE:  At this time, the EXCLUDE_PACKAGE and EXCLUDE_NAME properties only work 
+#         with a simple string containing one or more class/package name entries  
+#         separated by a comma (",").  I.e., no wildcard or regular expressions 
+#         are accepted/understood by the Code Generator parser.  Class/package  
+#         names need to be fully qualified, and are also case-sensitive. 
+# 
+#         Also, classes cannot be excluded if they have an association to other 
+#         class(es) that are not excluded, or if they are a parent class in a 
+#         generalization (inheritance) relationship with other class(es) that are 
+#         not excluded.
+#
+#         As an example, given the presence of the following classes within the UML 
+#         model:
+#
+#             * gov.nih.nci.cacoresdk.domain.interfaze.Dog
+#             * gov.nih.nci.cacoresdk.domain.inheritance.implicit.FreshwaterFishTank
+#             * gov.nih.nci.cacoresdk.domain.inheritance.implicit.Fish
+#
+#         and the following deploy.properties EXCLUDE_NAME setting:
+#
+#             EXCLUDE_NAME=gov.nih.nci.cacoresdk.domain.interfaze.Dog,FreshwaterFishTank,
+#             freshwaterfishtank,gov.nih.nci.cacoresdk.domain.inheritance.implicit.AngelFish
+#
+#         the SDK Code Generator would successfully exclude (skip generation of)
+#         artifacts for the Dog and Fish classes, but would not exclude generation
+#         of artifacts for the FreshwaterFishTank class as the first entry is not 
+#         fully qualified, and the second entry is neither fully qualified, nor
+#         does the case match.
+#
 ##################################################################################
 #MODEL_FILE=sdk.uml
 #MODEL_FILE_TYPE=ARGO
