--- a/SDK4/local.properties
+++ b/SDK4/local.properties
@@ -10,11 +10,13 @@ DB_DIALECT=org.hibernate.dialect.MySQLDialect
 #DB_DRIVER=oracle.jdbc.driver.OracleDriver
 #DB_DIALECT=org.hibernate.dialect.OracleDialect
 
-#DB_CONNECTION_URL=jdbc:hsqldb:mem:${DB_NAME}
+
+#DB_CONNECTION_URL=jdbc:hsqldb:mem:cacoresdk
 #DB_USERNAME=sa
 #DB_PASSWORD=
 #DB_DIALECT=org.hibernate.dialect.HSQLDialect
 #DB_DRIVER=org.hsqldb.jdbcDriver
+#HBM2DDL_ENABLED=true
 #HBM2DDL_TYPE=create-drop
 
 #NAMESPACE_PREFIX=gme://SDK Example Project.caCORE/1/
