--- a/SDK4/system/src/gov/nih/nci/system/web/struts/action/package.properties
+++ b/SDK4/system/src/gov/nih/nci/system/web/struts/action/package.properties
@@ -2,7 +2,7 @@ requiredstring = ${getText(fieldName)} is required.
 
 username = User Name
 password = Password
-Missing.message =  This feature is under construction. Please try again in the next interation.
+Missing.message =  This feature is under construction. Please try again in the next iteration.
 
 home.title = Home
 home.welcome.title = WELCOME TO THE CACORE SDK
