--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -124,8 +124,11 @@ SERVER_URL=http://localhost:8080/${PROJECT_NAME}
 #  EXCLUDE_NAME: specifies the name pattern of the class(es) within the object/
 #  data model that should be ignored (not processed) by the code generator.
 #
-#  NOTE:  At this time, the EXCLUDE_PACKAGE and EXCLUDE_NAME properties only work 
-#         with a simple string containing one or more class/package name entries  
+#  EXCLUDE_NAMESPACE: specifies the complete namespace of the UML Packages within the object/
+#  data model that should be ignored (not processed) by the code generator.
+#
+#  NOTE:  At this time, the EXCLUDE_PACKAGE, EXCLUDE_NAME, EXCLUDE_NAMESPACE properties 
+#         only work with a simple string containing one or more class/package name entries  
 #         separated by a comma (",").  I.e., no wildcard or regular expressions 
 #         are accepted/understood by the Code Generator parser.  Class/package  
 #         names need to be fully qualified, and are also case-sensitive. 
@@ -164,6 +167,7 @@ DATA_MODEL=Logical View.Data Model
 INCLUDE_PACKAGE=domain
 EXCLUDE_PACKAGE=
 EXCLUDE_NAME=
+EXCLUDE_NAMESPACE=
 
 ##################################################################################
 #  DATABASE CONNECTION PROPERTIES
@@ -236,7 +240,7 @@ CLM_DB_DRIVER=${DB_DRIVER}
 #  GENERATE_BEANS 			if enabled, generates Java beans from the object model
 #  GENERATE_CASTOR_MAPPING 	if enabled, generates castor mapping files for the 
 #                          	object model
-#  GENERATE_XSD 			if enabled, generates the XSD
+#  GENERATE_XSD 			if enabled, generates the XSD and XML Mapping files
 #  GENERATE_WSDD 			if enabled, generates the Web Services Deployment  
 #                 			Descriptor (WSDD) file
 #  GENERATE_HIBERNATE_VALIDATOR
@@ -249,13 +253,20 @@ CLM_DB_DRIVER=${DB_DRIVER}
 #							prior to insert or update.  This setting is only
 #							valid if the Writable API extension and security 
 #							are enabled as well.
+# GENERATE_XSD_WITH_GME_TAGS
+#                           Whether or not GME Namespace tag values should be used
+#							when generating Castor Mapping and XSD files.  For 
+#							more information, see GME Namespace Wiki: 
+#							https://wiki.nci.nih.gov/display/caCORE/GME+Namespace
 ##################################################################################
 VALIDATE_LOGICAL_MODEL=true
 VALIDATE_MODEL_MAPPING=true
+VALIDATE_GME_TAGS=true
 GENERATE_HIBERNATE_MAPPING=true
 GENERATE_BEANS=true
 GENERATE_CASTOR_MAPPING=true
 GENERATE_XSD=true
+GENERATE_XSD_WITH_GME_TAGS=true
 GENERATE_WSDD=true
 GENERATE_HIBERNATE_VALIDATOR=true
 ##################################################################################
