--- a/SDK4/junit/build.xml
+++ b/SDK4/junit/build.xml
@@ -144,6 +144,10 @@
 			<junit printsummary="yes" fork="yes" maxmemory="512m" showoutput="false" failureproperty="fail-prop" errorproperty="error-prop">
 				<sysproperty key="java.security.auth.login.config" value="./conf/login.config" />
 				<sysproperty key="webservice.url" value="${SERVER_URL}/services/${WEBSERVICE_NAME}" />
+				<sysproperty key="log4j.configuration" value="./conf/log4j.xml"/>
+				<sysproperty key="useGMETags" value="${GENERATE_XSD_WITH_GME_TAGS}"/>
+				<sysproperty key="namespaceUriPrefix" value="${NAMESPACE_PREFIX}"/>
+
 				<classpath>
 					<path refid="@{junitClasspath}" />
 				</classpath>
