--- a/SDK4/conf/codegen/log4j.properties
+++ b/SDK4/conf/codegen/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=info,stdout
+log4j.rootLogger=debug,stdout
 
 ### direct messages to file hibernate.log ###
 log4j.appender.clientLog=org.apache.log4j.FileAppender
@@ -35,4 +35,5 @@ log4j.logger.org.hibernate.tool.hbm2ddl=debug
 #log4j.logger.org.hibernate.connection.DriverManagerConnectionProvider=trace
 
 log4j.logger.gov.nih.nci=info
+log4j.logger.gov.nih.nci.codegen=info
 log4j.logger.org.springframework=error
