--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -251,13 +251,20 @@ CLM_DB_DRIVER=${DB_DRIVER}
 #							attributes.  At runtime, the value of domain object 
 #							attributes containing annotations will be validated
 #							prior to insert or update.  This setting is only
-#							valid if the Writable API extension and security 
-#							are enabled as well.
+#							valid if the Writable API extension 
+							(ENABLE_WRITABLE_API_EXTENSION) and security 
+#							(ENABLE_SECURITY) properties are enabled as well.
 # GENERATE_XSD_WITH_GME_TAGS
 #                           Whether or not GME Namespace tag values should be used
 #							when generating Castor Mapping and XSD files.  For 
 #							more information, see GME Namespace Wiki: 
 #							https://wiki.nci.nih.gov/display/caCORE/GME+Namespace
+# GENERATE_XSD_WITH_PERMISSIBLE_VALUES
+#                           Whether or not caDSR Permissible Values should be used
+#							as restriction/enumeration elements for a given 
+#                           attribute of a class when generating XSD files.
+#							This setting is only valid if generate XSD 
+							(GENERATE_XSD) property is enabled as well.
 ##################################################################################
 VALIDATE_LOGICAL_MODEL=true
 VALIDATE_MODEL_MAPPING=true
@@ -267,6 +274,7 @@ GENERATE_BEANS=true
 GENERATE_CASTOR_MAPPING=true
 GENERATE_XSD=true
 GENERATE_XSD_WITH_GME_TAGS=false
+GENERATE_XSD_WITH_PERMISSIBLE_VALUES=true
 GENERATE_WSDD=true
 GENERATE_HIBERNATE_VALIDATOR=true
 ##################################################################################
