--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -252,7 +252,7 @@ CLM_DB_DRIVER=${DB_DRIVER}
 #							attributes containing annotations will be validated
 #							prior to insert or update.  This setting is only
 #							valid if the Writable API extension 
-							(ENABLE_WRITABLE_API_EXTENSION) and security 
+#							(ENABLE_WRITABLE_API_EXTENSION) and security 
 #							(ENABLE_SECURITY) properties are enabled as well.
 # GENERATE_XSD_WITH_GME_TAGS
 #                           Whether or not GME Namespace tag values should be used
