Added missing comment...
SVN-Revision: 2232

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -264,7 +264,7 @@ CLM_DB_DRIVER=${DB_DRIVER}
 #							as restriction/enumeration elements for a given 
 #                           attribute of a class when generating XSD files.
 #							This setting is only valid if generate XSD 
-							(GENERATE_XSD) property is enabled as well.
+#							(GENERATE_XSD) property is enabled as well.
 ##################################################################################
 VALIDATE_LOGICAL_MODEL=true
 VALIDATE_MODEL_MAPPING=true
@@ -276,7 +276,7 @@ GENERATE_XSD=true
 GENERATE_XSD_WITH_GME_TAGS=false
 GENERATE_XSD_WITH_PERMISSIBLE_VALUES=false
 GENERATE_WSDD=true
-GENERATE_HIBERNATE_VALIDATOR=false
+GENERATE_HIBERNATE_VALIDATOR=true
 ##################################################################################
 #  ADVANCED PROPERTIES
 #
